setting up browsing

--- a/OnlineLibrary/OnlineLibrary/Views/Home/Index.cshtml
+++ b/OnlineLibrary/OnlineLibrary/Views/Home/Index.cshtml
@@ -2,5 +2,10 @@
     ViewData["Title"] = "Online Library";
 }
 
-<div class="text-center">
+<div class="container py-5">
+    <h1>Most popular books</h1>
+
+    <p>Use this page to show popular books in the library.</p>
 </div>
+
+
