--- a/OnlineLibrary/OnlineLibrary/Views/Shared/_Layout.cshtml
+++ b/OnlineLibrary/OnlineLibrary/Views/Shared/_Layout.cshtml
@@ -9,6 +9,12 @@
     <link rel="stylesheet" href="~/OnlineLibrary.styles.css" asp-append-version="true" />
     <link href='https://cdn.jsdelivr.net/npm/froala-editor@latest/css/froala_editor.pkgd.min.css' rel='stylesheet' type='text/css' />
     <script type='text/javascript' src='https://cdn.jsdelivr.net/npm/froala-editor@latest/js/froala_editor.pkgd.min.js'></script>
+
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
 </head>
 <body class="text-light bg-dark">
     <header>
@@ -41,7 +47,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2023 - OnlineLibrary - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2024 - OnlineLibrary - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
             <button onclick="topFunction()" id="myBtn" title="Go to top">TOP</button>
         </div>
     </footer>
